src/objects/Comms_Marketing_Service__c.object
<CustomObject>
    <fields>
        <fullName>Shared_Mailbox_Comms_Consultation__c</fullName>
        <defaultValue>&quot;ocmso@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Comms &amp; Consultation</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_Comms_Manager__c</fullName>
        <defaultValue>&quot;ocmso@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Comms Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_EWM__c</fullName>
        <defaultValue>&quot;webservices@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox EWM</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_Public_Engagement__c</fullName>
        <defaultValue>&quot;gsapublicengagement@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Public Engagement</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_Sub_Org_FAS__c</fullName>
        <defaultValue>&quot;ocmfas@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Sub Org FAS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_Sub_Org_PBS__c</fullName>
        <defaultValue>&quot;ocmpbs@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Sub Org PBS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shared_Mailbox_Survey_Services__c</fullName>
        <defaultValue>&quot;surveys@gsa.gov&quot;</defaultValue>
        <label>Shared Mailbox Survey Services</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source_of_Request__c</fullName>
        <inlineHelpText>Indicates how OCM received this request. &quot;Client Request&quot; is the default value if you are an OCM client completing the form. OCM employees should select how they received the request; or use &quot;OCM Employee Recommendation&quot; if its OCM&apos;s recommendation.</inlineHelpText>
        <label>Source of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Request</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Instant Message</fullName>
                </value>
                <value>
                    <fullName>OCM Employee Recommendation</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>At CIO</fullName>
                </value>
                <value>
                    <fullName>At Contractor</fullName>
                </value>
                <value>
                    <fullName>At Customer Review</fullName>
                </value>
                <value>
                    <fullName>At Printer</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Waiting for Confirmation from Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitting_Org__c</fullName>
        <inlineHelpText>Please enter your organization; the organization of the person making the request.</inlineHelpText>
        <label>Submitting Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Ofc of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK-Ofc of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B-Ofc of the Chief Financial Ofcr</fullName>
                </value>
                <value>
                    <fullName>C-Ofc of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D-Ofc of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E-Ofc of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G-Civilan Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H-Ofc of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I-Ofc of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J-Ofc of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L-Ofc of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M-Ofc of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P-Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q-Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S-Ofc of Congressional &amp; IntergovAffairs</fullName>
                </value>
                <value>
                    <fullName>X-Ofc of Citizen Srvcs &amp; Innovative Tech</fullName>
                </value>
                <value>
                    <fullName>Z-Ofc of Communications and Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitting_Region__c</fullName>
        <inlineHelpText>Please enter your region; the region of the person making the request.</inlineHelpText>
        <label>Submitting Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Objectives__c</fullName>
        <inlineHelpText>Provide an overview of why the survey is important and what it is trying to achieve.</inlineHelpText>
        <label>Survey Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Questions_Already_Written__c</fullName>
        <label>Survey Questions Already Written?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Tool__c</fullName>
        <label>Survey Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click Tools</fullName>
                </value>
                <value>
                    <fullName>Google Forms</fullName>
                </value>
                <value>
                    <fullName>Survey Analytics</fullName>
                </value>
                <value>
                    <fullName>Survey Monkey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <inlineHelpText>Please provide a detailed overview of the timeline around the survey&apos;s communication, distribution and analysis.</inlineHelpText>
        <label>Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <inlineHelpText>The total amount of costs related to the preparation, communication, distribution or analysis of the survey.</inlineHelpText>
        <label>Total Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Consultation_or_Assistance__c</fullName>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>Type of Consultation or Assistance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assistance with Approved Survey Tools</fullName>
                </value>
                <value>
                    <fullName>Assist in Selection/Eval of Consultant</fullName>
                </value>
                <value>
                    <fullName>Creation of the Framework</fullName>
                </value>
                <value>
                    <fullName>Creation of the Questions</fullName>
                </value>
                <value>
                    <fullName>External Survey Help</fullName>
                </value>
                <value>
                    <fullName>Full Survey Implementation</fullName>
                </value>
                <value>
                    <fullName>Questions About the Survey Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <inlineHelpText>If you selected Event please further clarify the type of event needed.</inlineHelpText>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Training__c</fullName>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>Type of Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved Survey Tools</fullName>
                </value>
                <value>
                    <fullName>Creating Valid and Reliable Questions</fullName>
                </value>
                <value>
                    <fullName>External Survey Process</fullName>
                </value>
                <value>
                    <fullName>How to Present your Findings</fullName>
                </value>
                <value>
                    <fullName>Mitigating Ethical Risks</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Survey Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Application__c</fullName>
        <label>Website/Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>GSA.gov</fullName>
                </value>
                <value>
                    <fullName>InSite</fullName>
                </value>
                <value>
                    <fullName>Mobile/App</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_GSA_Priorities_Align_to_the_Survey__c</fullName>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>What GSA Priorities Align to the Survey?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building a Stronger GSA</fullName>
                </value>
                <value>
                    <fullName>Delivering Better Value and Savings</fullName>
                </value>
                <value>
                    <fullName>Expanding Small Business Opportunities</fullName>
                </value>
                <value>
                    <fullName>Leading with Innovation</fullName>
                </value>
                <value>
                    <fullName>Making a More Sustainable Government</fullName>
                </value>
                <value>
                    <fullName>Serving Our Partners</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Comms &amp; Marketing Service</label>
    <nameField>
        <displayFormat>OCM-{0000000}</displayFormat>
        <label>Comms &amp; Marketing Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comms &amp; Marketing Services</pluralLabel>
    <recordTypes>
        <fullName>Communications_and_Marketing_Services</fullName>
        <active>true</active>
        <description>OCM&apos;s Corporate Comms team showcases GSA&apos;s important work to internal and external audiences.  Use this form to request strategic communications, enterprise messaging, enterprise web mgmt, graphics, printing, videos, photos, or even consultation.</description>
        <label>Communications Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media_Affairs_Public_Engagement</fullName>
        <active>true</active>
        <description>OCM&apos;s Media Affairs &amp; Public Engagement teams communicate projects, programs or initiatives externally to media or the public. Use this record to request any media-related activity, event planning or mgmt, help with social media or speaking events.</description>
        <label>Media Affairs &amp; Public Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Services</fullName>
        <active>true</active>
        <description>The OCM Survey Service creates a framework for the collection and management of survey data for GSA. Use this form to request consultative services; request training; or for approval of a survey or approval of a fiscal year (FY) survey plan.</description>
        <label>Survey Services</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Modification_Reason</fullName>
        <active>true</active>
        <description>&quot;Agreed Delivery Date-Modification Reason&quot; field is required, when &quot;Agreed Due Date&quot; field is changed.</description>
        <errorConditionFormula>Agreed_Due_Date__c &lt;&gt; PRIORVALUE(Agreed_Due_Date__c ) &amp;&amp; ISPICKVAL( Agreed_Due_Date_Modification_Reason__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Agreed_Due_Date_Modification_Reason__c</errorDisplayField>
        <errorMessage>&quot;Agreed Delivery Date-Modification Reason&quot; field is required, when &quot;Agreed Due Date&quot; field is changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Modification_Reason1</fullName>
        <active>true</active>
        <description>&quot;Agreed Delivery Date-Modification Reason&quot; field cannot be filled, when &quot;Agreed Due Date&quot; field is not entered.</description>
        <errorConditionFormula>ISBLANK( Agreed_Due_Date__c ) &amp;&amp; NOT(ISPICKVAL( Agreed_Due_Date_Modification_Reason__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Agreed_Due_Date_Modification_Reason__c</errorDisplayField>
        <errorMessage>&quot;Agreed Delivery Date-Modification Reason&quot; field cannot be filled, when &quot;Agreed Due Date&quot; field is not entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Modification_Reason2</fullName>
        <active>true</active>
        <description>&quot;Agreed Delivery Date-Modification Reason&quot; field is required, only when &quot;Agreed Due Date&quot; field is changed.</description>
        <errorConditionFormula>Agreed_Due_Date_Filled_Hidden__c == FALSE &amp;&amp; NOT ( ISPICKVAL( Agreed_Due_Date_Modification_Reason__c , &quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Agreed_Due_Date_Modification_Reason__c</errorDisplayField>
        <errorMessage>&quot;Agreed Delivery Date-Modification Reason&quot; field is required, only when &quot;Agreed Due Date&quot; field is changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Modification_Reason3</fullName>
        <active>true</active>
        <description>&quot;Agreed Delivery Date-Modification Reason&quot; field cannot be changed, when &quot;Agreed Due Date&quot; field is not changed.</description>
        <errorConditionFormula>Agreed_Due_Date__c == PRIORVALUE(Agreed_Due_Date__c) &amp;&amp; ISCHANGED( Agreed_Due_Date_Modification_Reason__c )</errorConditionFormula>
        <errorDisplayField>Agreed_Due_Date_Modification_Reason__c</errorDisplayField>
        <errorMessage>&quot;Agreed Delivery Date-Modification Reason&quot; field cannot be changed, when &quot;Agreed Due Date&quot; field is not changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Other_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Agreed_Due_Date_Modification_Reason__c , &quot;Other&quot;) &amp;&amp; ISBLANK( Other_Agreed_Due_Date_Modification__c )</errorConditionFormula>
        <errorDisplayField>Other_Agreed_Due_Date_Modification__c</errorDisplayField>
        <errorMessage>&quot;Other Agreed Due Date Modification&quot; field is required when &quot;Other&quot; is selected in &quot;Agreed Due Date Modification Reason&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Agreed_Due_Date_Other_Modification_2</fullName>
        <active>true</active>
        <description>&quot;Other Agreed Due Date Modification&quot; field is only applicable when &quot;Other&quot; is selected in &quot;Agreed Due Date Modification Reason&quot; field.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Agreed_Due_Date_Modification_Reason__c, &quot;Other&quot;))&amp;&amp; Other_Agreed_Due_Date_Modification__c &lt;&gt; &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Other_Agreed_Due_Date_Modification__c</errorDisplayField>
        <errorMessage>&quot;Other Agreed Due Date Modification&quot; field is only applicable when &quot;Other&quot; is selected in &quot;Agreed Due Date Modification Reason&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Convert_To_Project_Counter</fullName>
        <active>true</active>
        <description>When &quot;Convert To Project&quot; is checked. &quot;Convert To Project Counter&quot; field is updated &amp; when &quot;Convert To Project Counter&quot; reaches 2, it will stop user to check &quot;Convert To Project&quot; again.</description>
        <errorConditionFormula>Convert_To_Project_Counter__c = 2</errorConditionFormula>
        <errorMessage>This OCM task is no longer editable because you have exceeded the max number of attempts to convert an OCM task to a Project. Please continue all of your work within the Project Central record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Does_this_require_Social_Media_Only</fullName>
        <active>true</active>
        <description>&quot;Does this require Social Media only?&quot; field is required, when &quot;Yes&quot; is selected in &quot;Does this require Social Media?&quot; field.</description>
        <errorConditionFormula>AND (  ISPICKVAL( Does_This_Require_Social_Media__c , &quot;Yes&quot;) ,  ISPICKVAL( Does_This_Require_Social_Media_Only__c , &quot;&quot;)  )</errorConditionFormula>
        <errorDisplayField>Does_This_Require_Social_Media_Only__c</errorDisplayField>
        <errorMessage>&quot;Does This Require Social Media Only?&quot; field is required, when &quot;Yes&quot; is selected in &quot;Does This Require Social Media?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Does_this_require_Social_Media_Only2</fullName>
        <active>true</active>
        <description>&quot;Does this require Social Media only?&quot; field is required only applicable when &quot;Yes&quot; is selected in &quot;Does this require Social Media?&quot; field.</description>
        <errorConditionFormula>AND (  ISPICKVAL( Does_This_Require_Social_Media__c , &quot;No&quot;) ,  NOT ( ISPICKVAL( Does_This_Require_Social_Media_Only__c , &quot;&quot;) ))</errorConditionFormula>
        <errorDisplayField>Does_This_Require_Social_Media_Only__c</errorDisplayField>
        <errorMessage>&quot;Does This Require Social Media Only?&quot; field is only applicable when &quot;Yes&quot; is selected in &quot;Does This Require Social Media?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Duplicate_Identifier</fullName>
        <active>true</active>
        <description>&quot;Duplicate Identifier&quot; field is required, when &quot;Duplicate&quot; is selected in &quot;Status&quot; field.</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Duplicate&quot;) &amp;&amp;  ISBLANK(   Duplicate_Identifier__c )</errorConditionFormula>
        <errorDisplayField>Duplicate_Identifier__c</errorDisplayField>
        <errorMessage>&quot;Duplicate Identifier&quot; field is required when &quot;Duplicate&quot; is selected in &quot;Status&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Duplicate_Identifier_2</fullName>
        <active>true</active>
        <description>&quot;Duplicate Identifier&quot; field is only applicable required when &quot;Duplicate&quot; is selected in &quot;Status&quot; field.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c, &quot;Duplicate&quot;))&amp;&amp;   Duplicate_Identifier__c &lt;&gt; &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Duplicate_Identifier__c</errorDisplayField>
        <errorMessage>&quot;Duplicate Identifier&quot; field is only applicable required when &quot;Duplicate&quot; is selected in &quot;Status&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_EWM_Service_Requested</fullName>
        <active>true</active>
        <description>&quot;EWM Service Requested&quot; field is required, when &quot;Web Services&quot; is selected in &quot;Service Requested&quot; field.</description>
        <errorConditionFormula>ISPICKVAL( Services_Requested__c, &quot;Web-Services&quot; ) &amp;&amp; ( ISPICKVAL( EWM_Services_Requested__c , &quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>EWM_Services_Requested__c</errorDisplayField>
        <errorMessage>&quot;EWM Service Requested&quot; field is required, when &quot;Web Services&quot; is selected in &quot;Service Requested&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_EWM_Service_Type</fullName>
        <active>true</active>
        <description>&quot;EWM Service Type&quot; field is required, when &quot;EWM Services Requested&quot; is selected in &quot;Services Requested&quot; field.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(EWM_Services_Requested__c))),
    ISBLANK(TEXT(EWM_Service_Type__c))
)</errorConditionFormula>
        <errorDisplayField>EWM_Service_Type__c</errorDisplayField>
        <errorMessage>&quot;EWM Service Type&quot; field is required, when &quot;EWM Services Requested&quot; is selected in &quot;Services Requested&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_If_Yes_provide_a_copy_of_question</fullName>
        <active>true</active>
        <description>&quot;If Yes, provide a copy of the questions&quot; field is required, when &quot;Yes&quot; is selected in &quot;Survey questions already written?&quot; field.</description>
        <errorConditionFormula>AND ( ISPICKVAL( Survey_Questions_Already_Written__c , &quot;Yes&quot;) , ISBLANK( If_Yes_Provide_a_Copy_of_the_Questions__c ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_Provide_a_Copy_of_the_Questions__c</errorDisplayField>
        <errorMessage>&quot;If Yes, provide a copy of the questions&quot; field is required, when &quot;Yes&quot; is selected in &quot;Survey Questions Already Written?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_If_Yes_provide_a_copy_of_question_2</fullName>
        <active>true</active>
        <description>&quot;If Yes, provide a copy of the questions&quot; field is only applicable when &quot;Yes&quot; is selected in &quot;Survey questions already written?&quot; field.</description>
        <errorConditionFormula>AND ( ISPICKVAL( Survey_Questions_Already_Written__c , &quot;No&quot;) , NOT ISBLANK( If_Yes_Provide_a_Copy_of_the_Questions__c ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_Provide_a_Copy_of_the_Questions__c</errorDisplayField>
        <errorMessage>&quot;If Yes, provide a copy of the questions&quot; field is only applicable when &quot;Yes&quot; is selected in &quot;Survey Questions Already Written?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_If_Yes_why_is_it_required</fullName>
        <active>true</active>
        <description>&quot;If Yes, why is it required?&quot; field is required, when &quot;Yes&quot; is selected in &quot;Do responses include PII? &quot; field.</description>
        <errorConditionFormula>AND ( ISPICKVAL( Do_Responses_Include_PII__c , &quot;Yes&quot;) , ISBLANK( If_Yes_Why_Is_It_Required__c ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_Why_Is_It_Required__c</errorDisplayField>
        <errorMessage>&quot;If Yes, Why Is It Required?&quot; field is required, when &quot;Yes&quot; is selected in &quot;Do Responses Include PII? &quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_If_Yes_why_is_it_required_2</fullName>
        <active>true</active>
        <description>&quot;If Yes, why is it required?&quot; field is only applicable when &quot;Yes&quot; is selected in &quot;Do responses include PII? &quot; field.</description>
        <errorConditionFormula>AND ( ISPICKVAL( Do_Responses_Include_PII__c , &quot;No&quot;) , NOT ( ISBLANK( If_Yes_Why_Is_It_Required__c ) ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_Why_Is_It_Required__c</errorDisplayField>
        <errorMessage>&quot;If Yes, Why Is It Required?&quot; field is only applicable when &quot;Yes&quot; is selected in &quot;Do Responses Include PII? &quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Distribution_Method</fullName>
        <active>true</active>
        <description>&quot;Other Distribution Method&quot; field is required, when &quot;Other&quot; is selected in &quot;Distribution Method&quot; field.</description>
        <errorConditionFormula>AND ( ISPICKVAL( Distribution_Method__c , &quot;Other&quot;) , ISBLANK( Other_Distribution_Method__c ) )</errorConditionFormula>
        <errorDisplayField>Other_Distribution_Method__c</errorDisplayField>
        <errorMessage>&quot;Other Distribution Method&quot; field is required, when &quot;Other&quot; is selected in &quot;Distribution Method&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Distribution_Method_2</fullName>
        <active>true</active>
        <description>&quot;Other Distribution Method&quot; field is only applicable when &quot;Other&quot; is selected in &quot;Distribution Method&quot; field.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Distribution_Method__c, &quot;Other&quot;))&amp;&amp; Other_Distribution_Method__c &lt;&gt; &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Other_Distribution_Method__c</errorDisplayField>
        <errorMessage>&quot;Other Distribution Method&quot; field is only applicable when &quot;Other&quot; is selected in &quot;Distribution Method&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Priority</fullName>
        <active>true</active>
        <description>&quot;Other Priority&quot; field is required, when &quot;Other&quot; is selected in &quot;What GSA priorities align to the survey?&quot; field.</description>
        <errorConditionFormula>AND( INCLUDES(What_GSA_Priorities_Align_to_the_Survey__c , &quot;Other&quot;) , ISBLANK(  Other_Priority__c ) )</errorConditionFormula>
        <errorDisplayField>Other_Priority__c</errorDisplayField>
        <errorMessage>&quot;Other Priority&quot; field is required, when &quot;Other&quot; is selected in &quot;What GSA Priorities Align to the Survey?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Priority_2</fullName>
        <active>true</active>
        <description>&quot;Other Priority&quot; field is only applicable when &quot;Other&quot; is selected in &quot;What GSA priorities align to the survey?&quot; field.</description>
        <errorConditionFormula>NOT(INCLUDES(What_GSA_Priorities_Align_to_the_Survey__c, &quot;Other&quot;))&amp;&amp; Other_Priority__c &lt;&gt; &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Other_Priority__c</errorDisplayField>
        <errorMessage>&quot;Other Priority&quot; field is only applicable when &quot;Other&quot; is selected in &quot;What GSA Priorities Align to the Survey?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Services_Requested</fullName>
        <active>true</active>
        <description>&quot;Other Services Requested&quot; field is required, when &quot;Other&quot; is selected in &quot;Services Requested&quot; field.</description>
        <errorConditionFormula>ISPICKVAL( Services_Requested__c , &quot;Other&quot;) &amp;&amp;  ISBLANK( Other_Services_Requested__c )</errorConditionFormula>
        <errorDisplayField>Other_Services_Requested__c</errorDisplayField>
        <errorMessage>&quot;Other Services Requested&quot; field is required, when &quot;Other&quot; is selected in &quot;Services Requested&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OCM_Other_Services_Requested_2</fullName>
        <active>true</active>
        <description>&quot;Other&quot; field is only applicable when &quot;Other&quot; is selected from the &quot;Services Requested&quot; picklist values.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Services_Requested__c, &quot;Other&quot;))&amp;&amp;  Other_Services_Requested__c &lt;&gt; &quot;&quot;</errorConditionFormula>
        <errorDisplayField>Other_Services_Requested__c</errorDisplayField>
        <errorMessage>&quot;Other&quot; field is only applicable when &quot;Other&quot; is selected from the &quot;Services Requested&quot; picklist values.</errorMessage>
    </validationRules>
</CustomObject>